feat: ArtistDetail에 groupMembers 추가